--- a/app/src/main/res/layout/customer_fragment_profile.xml
+++ b/app/src/main/res/layout/customer_fragment_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,19 +10,19 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User Profile"
-        android:padding="20dp"
+        android:fontFamily="@font/poppins_semibold"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
+        android:padding="20dp"
+        android:text="User Profile"
         android:textColor="@color/green"
         android:textSize="25dp"
-        android:fontFamily="@font/poppins_semibold"/>
+        android:textStyle="bold" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/light_green"
-        android:layout_margin="20dp">
+        android:layout_margin="20dp"
+        android:backgroundTint="@color/light_green">
 
 
         <LinearLayout
@@ -34,22 +33,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingTop="15dp"
-                android:orientation="vertical">
+                android:paddingTop="15dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Username :"
-                    android:textSize="18dp"
-                    android:fontFamily="@font/poppins_semibold"/>
+                    android:textSize="18dp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Yash Aher"
-                    android:textSize="19dp"
                     android:textColor="@color/green"
-                    android:fontFamily="@font/poppins_semibold"/>
+                    android:textSize="19dp" />
 
             </LinearLayout>
 
@@ -57,28 +58,29 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingBottom="15dp"
-                android:orientation="vertical">
+                android:paddingBottom="15dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Password"
-                    android:textSize="18dp"
-                    android:fontFamily="@font/poppins_semibold"/>
+                    android:textSize="18dp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="yashaher"
+                    android:fontFamily="@font/poppins_semibold"
                     android:inputType="textPassword"
-                    android:textSize="19dp"
+                    android:text="yashaher"
                     android:textColor="@color/green"
-                    android:fontFamily="@font/poppins_semibold"/>
+                    android:textSize="19dp" />
 
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 
 
     <LinearLayout
@@ -91,34 +93,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:backgroundTint="@color/light_green"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:backgroundTint="@color/light_green">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Number of Food ordered"
-                    android:gravity="center_horizontal"
-                    android:textSize="20dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:textColor="@color/green"/>
+                    android:gravity="center_horizontal"
+                    android:text="Number of Food ordered"
+                    android:textColor="@color/green"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="500"
+                    android:fontFamily="@font/poppins_semibold"
                     android:gravity="center_horizontal"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/poppins_semibold"/>
+                    android:text="500"
+                    android:textSize="20dp" />
 
             </LinearLayout>
-
 
 
         </androidx.cardview.widget.CardView>
@@ -128,60 +129,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:backgroundTint="@color/light_green"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:backgroundTint="@color/light_green">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Number of Food ordered"
-                    android:gravity="center_horizontal"
-                    android:textSize="20dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:textColor="@color/green"/>
+                    android:gravity="center_horizontal"
+                    android:text="Number of Food ordered"
+                    android:textColor="@color/green"
+                    android:textSize="20dp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="500"
+                    android:fontFamily="@font/poppins_semibold"
                     android:gravity="center_horizontal"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/poppins_semibold"/>
+                    android:text="500"
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
 
-
     </LinearLayout>
 
 
     <Button
+        android:id="@+id/btnChangePass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:backgroundTint="@color/green"
+        android:fontFamily="@font/poppins_semibold"
         android:padding="15dp"
         android:text="Change Password"
-        android:textSize="17dp"
+        android:textColor="@color/white"
+        android:textSize="17dp" />
+
+    <Button
+        android:id="@+id/btnLogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:backgroundTint="@color/red"
         android:fontFamily="@font/poppins_semibold"
-        android:textColor="@color/white"/>
+        android:padding="15dp"
+        android:text="Logout"
+        android:textColor="@color/white"
+        android:textSize="17dp" />
 
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/helping_people"/>
-
-
-
+        android:src="@drawable/helping_people" />
 
 
 </LinearLayout>
